--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-i18next": "^11.3.3",
     "react-router": "^5.1.2",
     "react-scripts": "3.4.0"
   },
@@ -36,6 +40,8 @@
   },
   "devDependencies": {
     "bulma": "^0.8.0",
+    "i18next": "^19.3.2",
+    "react-i18next": "^11.3.3",
     "react-router-dom": "^5.1.2"
   }
 }
