--- a/Project/backend/package.json
+++ b/Project/backend/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "bcrypt": "^4.0.1",
