--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -17,8 +17,10 @@
     "password-validator": "^5.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
