--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -8,7 +8,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@inlet/react-pixi": "^1.2.6",
     "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -17,10 +19,10 @@
     "password-validator": "^5.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-indexed-db": "^1.0.8",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "redux": "^4.0.5"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
