Added new basic project structure

--- a/Project/backend/package.json
+++ b/Project/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon main"
   },
   "author": "GhostyJade",
-  "license": "ISC",
+  "license": "GPLv3",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
